@@ -97,4 +97,5 @@ acknowledgements:
 cheers && enjoy.
 --
 rncbc aka. Rui Nuno Capela
-rncbc@rncbc.org
+rncbc at rncbc dot org
+http://www.rncbc.org
